--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ form#search {
   width: 7%;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   padding: 1% 2% 1% 0;
   text-align: right;
 }
