--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ form#search {
   background-color: #6BB6FF;
   padding: 6px;
   border-radius: 8px;
-  margin-left: 10%;
+  margin-left: 2em;
 }
 
 #hits {
