--- a/style.scss
+++ b/style.scss
@@ -4,15 +4,17 @@
 $hc: #6BB6FF;
 $muted-color: #F7F6F4;
 $active-color: #F7E2C1;
+$column-width: 35em;
 
 
 body { font-size:100%; }
-h1 { font-size:2.25em;  /* 16x2.25=36 */ }
-h2 { font-size:1.5em;   /* 16x1.5=24 */ }
-h3 { font-size:1.125em; /* 16x1.125=18 */ }
-h4 { font-size:0.875em; /* 16x0.875=14 */ }
-p  { font-size:0.75em;  /* 16x0.75=12 */ }
+h1 { font-size:2.25em; }
+h2 { font-size:1.75em; }
+h3 { font-size:1.3em; }
+p { font-size:1.0em; line-height: 1.3; }
 
+
+body { padding-left: 4em; }
 
 #header {
   position:fixed;
@@ -20,7 +22,6 @@ p  { font-size:0.75em;  /* 16x0.75=12 */ }
   background-color: $hc;
   padding: 6px;
   border-radius: 8px;
-  margin-left: 2em;
   
   h1 {
     float: left;
@@ -33,12 +34,14 @@ p  { font-size:0.75em;  /* 16x0.75=12 */ }
 #hits {
   padding-top: 1ex;
   margin-top: 9ex;
-  margin-left: 2em;
-  width: 80%;
+  
   
   .non-snippet { display: none; }
   
-  h2 { margin-left: 10%; margin-top: 3ex; }
+  h2 {
+    margin-left: 10%;
+    margin-top: 3ex;
+  }
 }
 
 .match {
@@ -51,28 +54,24 @@ p  { font-size:0.75em;  /* 16x0.75=12 */ }
   
   .clear { clear: both; }
   
-  .title {
-    font-weight: bold;
-  }
+  h3 { margin-bottom: 1ex; }
   
   .meta-tab {
     background-color: $muted-color;
     float: left;
-    width: 8%;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    width: $column-width/7;
     border: 3px solid $muted-color;
-    padding: 1% 1% 1% 0;
     text-align: right;
+    padding: 1ex;
   }
   &:hover>.meta-tab { background-color: $active-color; border-color: $active-color; }
   
   .content {
     border-top: 3px solid $muted-color;
-    width: 85%;
+    border-left: 3px solid $muted-color;
+    width: $column-width;
     float: left;
-    padding: 1%;
+    padding: 1ex 0 0 1ex;
   }
   &:hover>.content { border-color: $active-color; }
 }
