--- a/style.scss
+++ b/style.scss
@@ -2,24 +2,37 @@
 
 
 $hc: #6BB6FF;
-$muted-color: #F7F6F4;
-$active-color: #F7E2C1;
+$inactive-muted-bg: #F7F6F2;
+$active-muted-bg: #EDECE8;
 $column-width: 35em;
+$active-fg: #000000;
+$inactive-fg: #403F3E;
 
 
 body { font-size:100%; }
 h1 { font-size:2.25em; }
 h2 { font-size:1.75em; }
 h3 { font-size:1.3em; }
-p { font-size:1.0em; line-height: 1.3; }
+p { font-size:1.0em; line-height: 1.45; }
+
+a {
+  color: $inactive-fg;
+  &:hover {
+    background-color: yellow;
+  }
+}
 
 
-body { padding-left: 4em; }
+body {
+  font-family: 'Forum', serif;
+  padding-left: 4em;
+  color: $inactive-fg;
+}
 
 #header {
   position:fixed;
   top: 2ex;
-  background-color: $hc;
+  background-color: $inactive-muted-bg;
   padding: 6px;
   border-radius: 8px;
   
@@ -31,16 +44,13 @@ body { padding-left: 4em; }
   form { float: left; }
 }
 
-#hits {
-  padding-top: 1ex;
-  margin-top: 9ex;
-  
-  
+#hits {  
   .non-snippet { display: none; }
   
   h2 {
-    margin-left: 10%;
-    margin-top: 3ex;
+    margin-top: 10ex;
+    margin-bottom: 4ex;
+    margin-left: 10em;
   }
 }
 
@@ -49,7 +59,7 @@ body { padding-left: 4em; }
 }
 
 .section {
-  margin-top: 4ex;
+  margin-bottom: 5ex;
   cursor: row-resize;
   
   .clear { clear: both; }
@@ -57,21 +67,23 @@ body { padding-left: 4em; }
   h3 { margin-bottom: 1ex; }
   
   .meta-tab {
-    background-color: $muted-color;
     float: left;
-    width: $column-width/7;
-    border: 3px solid $muted-color;
+    width: 5em;
     text-align: right;
     padding: 1ex;
   }
-  &:hover>.meta-tab { background-color: $active-color; border-color: $active-color; }
   
   .content {
-    border-top: 3px solid $muted-color;
-    border-left: 3px solid $muted-color;
+    border-left: 3px solid $inactive-muted-bg;
     width: $column-width;
     float: left;
     padding: 1ex 0 0 1ex;
   }
-  &:hover>.content { border-color: $active-color; }
+  &:hover>.content {
+    border-color: $active-muted-bg;
+  }
+  
+  &:hover {
+    color: $active-fg;
+  }
 }
