--- a/style.scss
+++ b/style.scss
@@ -31,6 +31,11 @@ body {
 
 .clear { clear: both; }
 
+.de-emph {
+  font-size: 0.8em;
+  color: $inactive-fg;
+}
+
 #header {
   background-color: $inactive-muted-bg;
   padding: 2ex 3ex 2ex 3ex;
@@ -60,6 +65,10 @@ body {
   color: $active-fg;
   max-width: $column-width;
   margin-bottom: 3ex;
+  
+  p {
+    margin-bottom: 2ex;
+  }
 }
 
 #hits {  
